# fiumi_emilia_romagna

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  stations.json  tailwind.config.js  timeseries_cento.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/alert_core/: Cargo.toml
crates/alert_core/src/api/: mod.rs
crates/alert_core/src/model/: mod.rs
crates/alert_gui/: Cargo.toml
crates/alert_tui/: Cargo.toml
crates/alert_tui/src/: app.rs  cli.rs  config.rs  graph.rs  lib.rs  main.rs  table.rs
crates/alert_tui/src/framework/: config.rs  mod.rs  runtime.rs
crates/alert_tui/src/pages/: graph.rs  mod.rs  selection.rs
src/: App.tsx  constants.ts  graph.rs  lib.rs  main.rs  table.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: error.rs  mod.rs
src-tauri/src/fiumi_lib/: cli.rs  event_handler_trait.rs  graph.rs  mod.rs  table.rs
src-tauri/src/launch_options/: mod.rs
src-tauri/src/model/: mod.rs
src/api/: stations.ts  timeseries.ts
src/components/: route-error.tsx  station-card.tsx  theme-switch.tsx
src/components/custom_ui/: link.tsx  spinner.tsx
src/contexts/: theme.tsx
src/pages/: Home.tsx  Root.tsx  Timeseries.tsx
src/types/: station.ts  timeseries.ts
