[workspace]
members = ["crates/alert_*"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = []
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1" }
argh = "0.1"
async-channel = "2"
frizbee = "0.8"
ratatui = { version = "0.30", features = ["macros", "palette", "unstable-widget-ref", "serde"] }
crossterm = "0.29"
fakeit = "1.2"
itertools = "0.14"
tokio = { version = "1", features = ["macros", "rt", "time"] }
unicode-width = "0.2"
reqwest = { version = "0.13.2", features = ["json", "query", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.18"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
url = "2.5"
