[package]
name = "FiumiAlert"
version = "0.1.0"
description = "Controlla lo stato dei fiumi in emilia romagna"
authors = ["Francesco Luzzi"]
license = "MIT"
repository = "https://github.com/FrancescoLuzzi/fiumi_emilia_romagna"
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde_with = "3.9"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.2", features = [] }
ratatui = { version = "0.28.1", features = ["macros", "palette", "unstable-widget-ref", "serde"] }
crossterm = "0.28.1"
fakeit = "1.2"
itertools = "0.13"
unicode-width = "0.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
url = "2.5"
argh = "0.1"
